--- a/src/server_employer/Source/views/layouts/main_employer_login.hbs
+++ b/src/server_employer/Source/views/layouts/main_employer_login.hbs
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" href="https://firebasestorage.googleapis.com/v0/b/jobhiringweb.appspot.com/o/logo%2Flogo-business.png?alt=media&token=5fbb55cd-ffa3-46d2-b9ef-49fdaeacb723">
+    <link rel="shortcut icon" href="https://firebasestorage.googleapis.com/v0/b/jobhiringweb.appspot.com/o/logo%2FlogoBusiness.png?alt=media&token=00de7530-d9d1-4d9a-bf61-4be4858b389d">
     <link rel="stylesheet" href="/css/style/css/css.css">
     <link href='https://fonts.googleapis.com/css?family=Poppins' rel='stylesheet'>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css"
