--- a/src/server_employer/Source/views/contents/edit_profile_employer.hbs
+++ b/src/server_employer/Source/views/contents/edit_profile_employer.hbs
@@ -1,9 +1,9 @@
 <div class="rectangle_mid_news_home_recruit">
     {{> menu}}
 
-    <div class="container-xl px-4 mt-4">
+    <div class="container-xl" style="margin-left: 360px; margin-right: 300px;">
         <!-- Account page navigation-->
-        <nav class="nav nav-borders">
+        {{!-- <nav class="nav nav-borders">
             <a class="nav-link active ms-0"
                 href="https://www.bootdey.com/snippets/view/bs5-edit-profile-account-details"
                 target="__blank">Profile</a>
@@ -14,157 +14,275 @@
             <a class="nav-link" href="https://www.bootdey.com/snippets/view/bs5-edit-notifications-page"
                 target="__blank">Notifications</a>
         </nav>
-        <hr class="mt-0 mb-4">
-        <div class="row">
-            <div class="col-xl-4">
-                <!-- Profile picture card-->
-                <div class="card mb-4 mb-xl-0">
-                    <div class="card-header">Profile Picture</div>
-                    <div class="card-body text-center">
-                        <!-- Profile picture image-->
-                        <img class="img-account-profile rounded-circle mb-2"
-                            src="http://bootdey.com/img/Content/avatar/avatar1.png" alt="">
-                        <!-- Profile picture help block-->
-                        <div class="small font-italic text-muted mb-4">JPG or PNG no larger than 5 MB</div>
-                        <!-- Profile picture upload button-->
-                        <button class="btn btn-primary" type="button">Upload new image</button>
-                    </div>
+        <hr class="mt-0 mb-4"> --}}
+        {{!-- <div class="col-xl-4">
+            <!-- Profile picture card-->
+            <div class="card mb-4 mb-xl-0">
+                <div class="card-header">Profile Picture</div>
+                <div class="card-body text-center">
+                    <!-- Profile picture image-->
+                    <img class="img-account-profile rounded-circle mb-2"
+                        src="http://bootdey.com/img/Content/avatar/avatar1.png" alt="">
+                    <!-- Profile picture help block-->
+                    <div class="small font-italic text-muted mb-4">JPG or PNG no larger than 5 MB</div>
+                    <!-- Profile picture upload button-->
+                    <button class="btn btn-primary" type="button">Upload new image</button>
                 </div>
             </div>
-            <div class="col-xl-8">
-                <!-- Account details card-->
-                <div class="card mb-4">
-                    <div class="card-header">Account Details</div>
-                    <div class="card-body">
-                        <form>
-                            <!-- Form Group (username)-->
-                            <div class="mb-3">
-                                <label class="small mb-1" for="inputUsername">Username (how your name will appear to
-                                    other users on the site)</label>
-                                <input class="form-control" id="inputUsername" type="text"
-                                    placeholder="Enter your username" value="username">
-                            </div>
-                            <!-- Form Row-->
-                            <div class="row gx-3 mb-3">
-                                <!-- Form Group (first name)-->
-                                <div class="col-md-6">
-                                    <label class="small mb-1" for="inputFirstName">First name</label>
-                                    <input class="form-control" id="inputFirstName" type="text"
-                                        placeholder="Enter your first name" value="Valerie">
-                                </div>
-                                <!-- Form Group (last name)-->
-                                <div class="col-md-6">
-                                    <label class="small mb-1" for="inputLastName">Last name</label>
-                                    <input class="form-control" id="inputLastName" type="text"
-                                        placeholder="Enter your last name" value="Luna">
-                                </div>
-                            </div>
-                            <!-- Form Row        -->
-                            <div class="row gx-3 mb-3">
-                                <!-- Form Group (organization name)-->
-                                <div class="col-md-6">
-                                    <label class="small mb-1" for="inputOrgName">Organization name</label>
-                                    <input class="form-control" id="inputOrgName" type="text"
-                                        placeholder="Enter your organization name" value="Start Bootstrap">
-                                </div>
-                                <!-- Form Group (location)-->
-                                <div class="col-md-6">
-                                    <label class="small mb-1" for="inputLocation">Location</label>
-                                    <input class="form-control" id="inputLocation" type="text"
-                                        placeholder="Enter your location" value="San Francisco, CA">
-                                </div>
-                            </div>
-                            <!-- Form Group (email address)-->
-                            <div class="mb-3">
-                                <label class="small mb-1" for="inputEmailAddress">Email address</label>
-                                <input class="form-control" id="inputEmailAddress" type="email"
-                                    placeholder="Enter your email address" value="name@example.com">
-                            </div>
-                            <!-- Form Row-->
-                            <div class="row gx-3 mb-3">
-                                <!-- Form Group (phone number)-->
-                                <div class="col-md-6">
-                                    <label class="small mb-1" for="inputPhone">Phone number</label>
-                                    <input class="form-control" id="inputPhone" type="tel"
-                                        placeholder="Enter your phone number" value="555-123-4567">
-                                </div>
-                                <!-- Form Group (birthday)-->
-                                <div class="col-md-6">
-                                    <label class="small mb-1" for="inputBirthday">Birthday</label>
-                                    <input class="form-control" id="inputBirthday" type="text" name="birthday"
-                                        placeholder="Enter your birthday" value="06/10/1988">
-                                </div>
-                            </div>
-                            <!-- Save changes button-->
-                            <button class="btn btn-primary" type="button">Save changes</button>
-                        </form>
+        </div> --}}
+        {{!-- <div class="col-xl-8">
+        </div> --}}
+        <!-- Account details card-->
+        <div class="card mb-4">
+            <div class="card-header">Cập nhật thông tin công ty</div>
+            <div class="card-body">
+                <form method="post" action="/employer/edit_profile_employer" enctype="multipart/form-data">
+                    {{#if message}}
+                    <div class="alert alert-success mt-2">
+                        {{message}}
                     </div>
-                </div>
+                    {{/if}}
+
+                    {{#if messageDanger}}
+                    <div class="alert alert-danger mt-2">
+                        {{messageDanger}}
+                    </div>
+                    {{/if}}
+                    <div class="mb-3">
+                        {{!-- <label class="small mb-1" for="inputLogo">Logo</label> --}}
+                        {{!-- <input id="inputLogo" type="file" value="logo" name="file" required> --}}
+                        {{!-- <img src="{{data.user.avatar}}" alt="Avatar cong ty" width="100px"> --}}
+                        <div class="image-area w-25"><img id="imageResult" width="100px" src="{{data.user.avatar}}"
+                                alt="" class="img-fluid rounded shadow-sm mx-auto d-block"></div>
+                        <input id="upload" type="file" onchange="readURL(this);" name="file"
+                            class="form-control border-0">
+                            <label for="upload" class="btn btn-light m-0 rounded-pill px-4" style="cursor: pointer;"> <i
+                                    class="fa fa-cloud-upload mr-2 text-muted"></i><small
+                                    class="text-uppercase font-weight-bold text-muted">Thay đổi Logo</small></label>
+                    </div>
+                    <!-- name-->
+                    <div class="mb-3">
+                        <label class="small mb-1" for="inputUsername">Tên công ty</label>
+                        <input class="form-control" name="name" id="inputUsername" type="text"
+                            placeholder="Nhập tên công ty của bạn" value="{{data.user.name}}">
+                    </div>
+                    <!-- Form Row-->
+                    <div class="row gx-3 mb-3">
+
+                        {{#if data.user.verify}}
+                        <!-- Email-->
+                        <div class="col-md-6">
+                            <label class="small mb-1" for="inputEmail">Email</label>
+                            {{!-- <input class="form-control" id="inputEmail" type="text"
+                                placeholder="Nhập email của bạn" value="{{data.user.email}}" name="email"
+                                aria-describedby="basic-addon2" disabled>
+                            <span class="input-group-text" id="basic-addon2">@example.com</span> --}}
+                            <div class="input-group mb-3">
+                                <input type="text" id="inputEmail" class="form-control" placeholder="Nhập email của bạn"
+                                    value="{{data.user.email}}" name="email" aria-label="Recipient's username"
+                                    aria-describedby="basic-addon2" disabled>
+                                <span class="input-group-text text-primary" id="basic-addon2">Đã xác thực</span>
+                            </div>
+                        </div>
+                        {{else}}
+                        <!-- Email-->
+                        <div class="input-group mb-3">
+                            <input type="text" id="inputEmail" class="form-control" placeholder="Nhập email của bạn"
+                                value="{{data.user.email}}" name="email" aria-label="Recipient's username"
+                                aria-describedby="basic-addon2" disabled>
+                            <span class="input-group-text" id="basic-addon2">Chưa xác thực</span>
+                        </div>>
+                        {{/if}}
+                        <!-- Số điện thoại-->
+                        <div class="col-md-6">
+                            <label class="small mb-1" for="inputPhone">Số điện thoại</label>
+                            <input class="form-control" id="inputPhone" type="tel"
+                                placeholder="Nhấp số điện thoại của bạn" value="{{data.user.phone}}" name="phone">
+                        </div>
+                    </div>
+                    <!-- Form Row        -->
+                    <div class="row gx-3 mb-3">
+                        <div class="col-md-6">
+                            <label class="small mb-1" for="province">Tỉnh/ Thành phố</label>
+                            <input class="form-control" id="province" type="text"
+                                placeholder="Enter your organization name" value="{{data.user.province}}" disabled>
+                        </div>
+                        <div class="col-md-6">
+                            <label class="small mb-1" for="district">Quận/ Huyện</label>
+                            <input class="form-control" id="district" type="text" placeholder="Enter your location"
+                                value="{{data.user.district}}" disabled>
+                        </div>
+                    </div>
+                    <!-- Form Row-->
+                    <div class="row gx-3 mb-3">
+                        <!-- Form Group (phone number)-->
+                        <div class="col-md-6">
+                            <label class="small mb-1" for="ward">Phường/ Xã</label>
+                            <input class="form-control" id="ward" type="text" placeholder="" value="{{data.user.ward}}"
+                                disabled>
+                        </div>
+                        <!-- Form Group (street)-->
+                        <div class="col-md-6">
+                            <label class="small mb-1" for="street">Địa chỉ cụ thể</label>
+                            <input class="form-control" id="street" type="text" name="street"
+                                placeholder="Nhập địa chỉ cụ thể của công ty" value="{{data.user.street}}">
+                        </div>
+                    </div>
+
+                    <!-- name-->
+                    <div class="mb-3">
+                        <label class="small mb-1" for="Mô tả công ty">Mô tả công ty</label>
+                        <textarea class="form-control" name="description" id="Mô tả công ty" type="text"
+                            placeholder="Mô tả công ty của bạn">{{data.user.description}}</textarea>
+                    </div>
+                    <!-- Save changes button-->
+                    <button class="btn btn-primary" type="submit">Lưu</button>
+                </form>
             </div>
         </div>
+        {{!-- <div class="row">
+        </div> --}}
     </div>
 
 </div>
 
 <style>
+    .img-account-profile {
+        height: 10rem;
+    }
 
-    body{margin-top:20px;
-background-color:#f2f6fc;
-color:#69707a;
-}
-.img-account-profile {
-    height: 10rem;
-}
-.rounded-circle {
-    border-radius: 50% !important;
-}
-.card {
-    box-shadow: 0 0.15rem 1.75rem 0 rgb(33 40 50 / 15%);
-}
-.card .card-header {
-    font-weight: 500;
-}
-.card-header:first-child {
-    border-radius: 0.35rem 0.35rem 0 0;
-}
-.card-header {
-    padding: 1rem 1.35rem;
-    margin-bottom: 0;
-    background-color: rgba(33, 40, 50, 0.03);
-    border-bottom: 1px solid rgba(33, 40, 50, 0.125);
-}
-.form-control, .dataTable-input {
-    display: block;
-    width: 100%;
-    padding: 0.875rem 1.125rem;
-    font-size: 0.875rem;
-    font-weight: 400;
-    line-height: 1;
-    color: #69707a;
-    background-color: #fff;
-    background-clip: padding-box;
-    border: 1px solid #c5ccd6;
-    -webkit-appearance: none;
-    -moz-appearance: none;
-    appearance: none;
-    border-radius: 0.35rem;
-    transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
-}
+    .rounded-circle {
+        border-radius: 50% !important;
+    }
 
-.nav-borders .nav-link.active {
-    color: #0061f2;
-    border-bottom-color: #0061f2;
-}
-.nav-borders .nav-link {
-    color: #69707a;
-    border-bottom-width: 0.125rem;
-    border-bottom-style: solid;
-    border-bottom-color: transparent;
-    padding-top: 0.5rem;
-    padding-bottom: 0.5rem;
-    padding-left: 0;
-    padding-right: 0;
-    margin-left: 1rem;
-    margin-right: 1rem;
-}
+    .card .card-header {
+        font-weight: 500;
+    }
+
+    .card-header:first-child {
+        border-radius: 0.35rem 0.35rem 0 0;
+    }
+
+    .card-header {
+        padding: 1rem 1.35rem;
+        margin-bottom: 0;
+        background-color: rgba(33, 40, 50, 0.03);
+        border-bottom: 1px solid rgba(33, 40, 50, 0.125);
+    }
+
+    .form-control,
+    .dataTable-input {
+        display: block;
+        width: 100%;
+        padding: 0.875rem 1.125rem;
+        font-size: 0.875rem;
+        font-weight: 400;
+        line-height: 1;
+        color: #69707a;
+        background-color: #fff;
+        background-clip: padding-box;
+        border: 1px solid #c5ccd6;
+        -webkit-appearance: none;
+        -moz-appearance: none;
+        appearance: none;
+        border-radius: 0.35rem;
+        transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
+    }
+
+    .nav-borders .nav-link.active {
+        color: #0061f2;
+        border-bottom-color: #0061f2;
+    }
+
+    .nav-borders .nav-link {
+        color: #69707a;
+        border-bottom-width: 0.125rem;
+        border-bottom-style: solid;
+        border-bottom-color: transparent;
+        padding-top: 0.5rem;
+        padding-bottom: 0.5rem;
+        padding-left: 0;
+        padding-right: 0;
+        margin-left: 1rem;
+        margin-right: 1rem;
+    }
+
+    #upload {
+        opacity: 0;
+    }
+
+    #upload-label {
+        position: absolute;
+        top: 50%;
+        left: 1rem;
+        transform: translateY(-50%);
+    }
+
+    .image-area {
+        border: 2px dashed rgba(53, 48, 48, 0.7);
+        padding: 1rem;
+        position: relative;
+    }
+
+    .image-area::before {
+        content: 'Uploaded image result';
+        color: #fff;
+        font-weight: bold;
+        text-transform: uppercase;
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        font-size: 0.8rem;
+        z-index: 1;
+    }
+
+    .image-area img {
+        z-index: 2;
+        position: relative;
+    }
+
+    body {
+        min-height: 100vh;
+        background-color: #757f9a;
+        background-image: linear-gradient(147deg, #757f9a 0%, #d7dde8 100%);
+    }
 </style>
+
+<script>
+
+    /*  ==========================================
+        SHOW UPLOADED IMAGE
+    * ========================================== */
+    function readURL(input) {
+        if (input.files && input.files[0]) {
+            var reader = new FileReader();
+
+            reader.onload = function (e) {
+                $('#imageResult')
+                    .attr('src', e.target.result);
+            };
+            reader.readAsDataURL(input.files[0]);
+        }
+    }
+
+    $(function () {
+        $('#upload').on('change', function () {
+            readURL(input);
+        });
+    });
+
+    /*  ==========================================
+        SHOW UPLOADED IMAGE NAME
+    * ========================================== */
+    var input = document.getElementById('upload');
+    var infoArea = document.getElementById('upload-label');
+
+    input.addEventListener('change', showFileName);
+    function showFileName(event) {
+        var input = event.srcElement;
+        var fileName = input.files[0].name;
+        infoArea.textContent = 'File name: ' + fileName;
+    }
+
+</script>
