--- a/src/server_employer/Source/views/partials/menu.hbs
+++ b/src/server_employer/Source/views/partials/menu.hbs
@@ -7,8 +7,7 @@
         <img src="/css/style/image/ic_management_recruit.svg" id="ic_manage_recruit_home_recruit"
             alt="ic_manage_recruit_home_recruit">
     </a>
-    <a id="menu_manage_record_home_recruit" href="/employer/manage_candidates_cvs" class="menu_item">Quản lý hồ sơ ứng
-        viên
+    <a id="menu_manage_record_home_recruit" href="/employer/profile" class="menu_item">Trang cá nhân
         <img src="/css/style/image/ic_management_record.svg" id="ic_manage_record_home_recruit"
             alt="ic_manage_record_home_recruit">
     </a>
