--- a/src/server_employer/Source/views/partials/header_employer_login.hbs
+++ b/src/server_employer/Source/views/partials/header_employer_login.hbs
@@ -1,5 +1,9 @@
 <nav class="navbar navbar-expand-lg navbar-light header">
-    <a href="/employer/homepage"><img id="logo_web_home_recruit" src="/css/style/image/logo_web.svg" alt="logoweb"></a>
+    <a href="/employer/homepage">
+        <img id="logo_web_home_recruit" src="/css/style/image/logo_web.svg" alt="logoweb">
+        <img id="logo_web_for_business" src="/css/style/image/for_business.svg" alt="logoweb">
+
+    </a>
     <a id="post_news_recruit" href="/employer/add_recruitment">Đăng tin
         <img src="/css/style/image/ic_post_news.svg" id="ic_post_news_home_recruit" alt="ic_post_news_home_recruit">
     </a>
@@ -19,8 +23,7 @@
                 <img src="/css/style/image/ic_setting_account.svg" id="ic_setting_account_candidate"
                     alt="ic_setting_account_candidate">
             </a>
-            <a class="dropdown-item" id="application_management_candidate" href="/employer/manage_recruitments">Quản lý
-                hồ sơ ứng tuyển
+            <a class="dropdown-item" id="application_management_candidate" href="/employer/manage_recruitments">Quản lý tin tuyển dụng
                 <img src="/css/style/image/ic_managed_application.svg" id="ic_application_management_candidate"
                     alt="ic_application_management_candidate">
             </a>
