fix search candidate + UI

--- a/src/server_employer/Source/views/contents/manage_recruitments.hbs
+++ b/src/server_employer/Source/views/contents/manage_recruitments.hbs
@@ -43,7 +43,7 @@
     const list_recruitments = {{{ data.list_recruitments }}}
     const id_recruitments = {{{ data.id_recruitments }}}
 
-    $("#text_recruitment_efficiency").html("Tổng số tin đã đăng: " + list_recruitments.length)
+    $("#text_recruitment_efficiency").html("Tổng số tin: " + list_recruitments.length)
 
     for (let i = 0; i < list_recruitments.length; i++) {
         let _date = new Date(list_recruitments[i].due_date._seconds * 1000);
