--- a/src/server_candidate/Source/views/partials/header_candidate_login.hbs
+++ b/src/server_candidate/Source/views/partials/header_candidate_login.hbs
@@ -10,7 +10,7 @@
             <img src="{{data.user.avatar}}" id="avatar_candidate" alt="avatar_candidate">
         </button>
         <div class="dropdown-menu" id="dropdown_menu_candidate" aria-labelledby="menu_account_candidate">
-            <a class="dropdown-item" id="setting_account_candidate" href="#">Cài đặt tài khoản
+            <a class="dropdown-item" id="setting_account_candidate" href="/candidate/profile">Trang cá nhân
                 <img src="/css/style/image/ic_setting_account.svg" id="ic_setting_account_candidate"
                     alt="ic_setting_account_candidate">
             </a>
