--- a/src/server_employer/Source/views/partials/header_employer_login.hbs
+++ b/src/server_employer/Source/views/partials/header_employer_login.hbs
@@ -27,6 +27,10 @@
                 <img src="/css/style/image/ic_managed_application.svg" id="ic_application_management_candidate"
                     alt="ic_application_management_candidate">
             </a>
+            <a class="dropdown-item" id="application_management_candidate" href="/auth/change_password">Đổi mật khẩu
+                <img src="/css/style/image/ic_managed_application.svg" id="ic_application_management_candidate"
+                    alt="ic_application_management_candidate">
+            </a>
             <form action="/auth/logout" method="post">
                 <button class="dropdown-item" id="logout_recruit" type="submit">Đăng xuất
                     <img src="/css/style/image/ic_logout.svg" id="ic_logout_candidate" alt="ic_logout_candidate">
