--- a/src/server_admin/Source/views/content_admin/list_news.hbs
+++ b/src/server_admin/Source/views/content_admin/list_news.hbs
@@ -8,7 +8,7 @@
             <th>Ngày tạo</th>
             <th>Lượt nộp</th>
         </tr>
-        {{#each list}}
+        {{!-- {{#each list}}
         <tr onclick="window.location.href='http://localhost:3035/admin/manage_news/detail_news?id={{this.doc}}'">
             <td>{{this.stt}}</td>
             <td>{{this.title}}</td>
@@ -17,28 +17,60 @@
             <td>{{this.numberCV}}</td>
         </tr>
         {{/each}}
-      
+       --}}
 
 
     </table>
     <nav aria-label="Page navigation example" id="nav_page_home_manage_recruit">
         <ul class="pagination">
-            <li class="page-item">
-                <a class="page-link" href="#" aria-label="Previous">
-                    <span aria-hidden="true">&laquo;</span>
-                    <span class="sr-only">Previous</span>
-                </a>
-            </li>
-            <li class="page-item"><a class="page-link" href="#">1</a></li>
+       
+            {{!-- <li class="page-item"><a class="page-link" href="#">1</a></li>
             <li class="page-item"><a class="page-link" href="#">2</a></li>
             <li class="page-item"><a class="page-link" href="#">3</a></li>
-            <li class="page-item">
-                <a class="page-link" href="#" aria-label="Next">
-                    <span aria-hidden="true">&raquo;</span>
-                    <span class="sr-only">Next</span>
-                </a>
-            </li>
+      --}}
         </ul>
     </nav>
 
 </div>
+<script>
+    const list_news = {{{ data.list_news }}}
+    var numbers = [];
+    if (list_news.length % 8 == 0) {
+        for (let i = 1; i <= list_news.length / 8; i++) {
+            numbers.push(i);
+        }
+    } else {
+        for (let i = 1; i <= list_news.length / 8 + 1; i++) {
+            numbers.push(i);
+        }
+    }
+
+    for (let i = 0; i < numbers.length; i++) {
+
+        $(".pagination").append(`
+             <li class="page-item"><a class="page-link" onclick="page(this.id)" id="${numbers[i]}">${numbers[i]}</a></li>
+        `)
+    }
+    window.onload = page(1);
+
+    function page(page) {
+        var tr = $(".row_body");
+        for (i = 0; i < tr.length; i++) {
+            tr[i].remove();
+        }
+        page = parseInt(page);
+        var _list_news = list_news.slice(8 * (page - 1), 8 * (page - 1) + 8);
+        for (let i = 0; i < _list_news.length; i++) {
+
+            $("#table_mamage_recruit").append(`
+            <tr class="row_body" onclick="window.location.href='http://localhost:3035/admin/manage_news/detail_news?id=${_list_news[i].doc}'">
+                <td ">${_list_news[i].stt}</td>
+                <td ">${_list_news[i].title}</td>
+                <td  ">${_list_news[i].nameEmployer}</td>
+                <td  ">${_list_news[i].creation_date}</td>
+                <td ">${_list_news[i].numberCV}</td>
+            </tr>
+        `)
+        }
+    }
+</script>
