--- a/src/server_admin/Source/views/partials/menu.hbs
+++ b/src/server_admin/Source/views/partials/menu.hbs
@@ -1,15 +1,32 @@
 <div class="side_left_home_admin">
-    <a id="menu_manage_account_user_admin" href="/admin/manage_account">Quản lý tài khoản người dùng
-        <img src="/css/style/image/ic_management_record.svg" id="ic_news_home_recruit" alt="ic_news_home_recruit">
+    <a id="menu_manage_account_user_admin" href="/admin/manage_account" class="non_selected">Quản lý tài khoản người
+        dùng
+        <img src="/css/style/image/ic_management_record.svg" id="ic_news_home_recruit" alt="ic_news_home_recruit"
+            class="on_filter">
     </a>
-    <a id="menu_manage_news_home_admin" href="/admin/manage_news">Quản lý tin tuyển dụng
+    <a id="menu_manage_news_home_admin" href="/admin/manage_news" class="non_selected">Quản lý tin tuyển dụng
         <img src="/css/style/image/ic_management_recruit.svg" id="ic_manage_recruit_home_recruit"
             alt="ic_manage_recruit_home_recruit">
     </a>
-    <a id="menu_manage_report_home_admin" href="/admin/manage_reports">Quản lý báo cáo tin tuyển dụng
+    <a id="menu_manage_report_home_admin" href="/admin/manage_reports" class="non_selected">Quản lý báo cáo tin tuyển
+        dụng
         <img src="/css/style/image/ic_report.svg" id="ic_manage_record_home_recruit"
             alt="ic_manage_record_home_recruit">
     </a>
     <div id="line"></div>
     <div id="text_version">©️2022 JORE. All rights reversed.</div>
 </div>
+
+<style>
+    .is_selected {
+        color: #00B4D8 !important;
+    }
+
+    .non_selected {
+        color: #3D3D3D !important;
+    }
+
+    .on_filter {
+        filter: invert(52%) sepia(32%) saturate(3800%) hue-rotate(154deg) brightness(98%) contrast(102%) !important;
+    }
+</style>
