--- a/src/server_admin/Source/views/partials/header_admin_login.hbs
+++ b/src/server_admin/Source/views/partials/header_admin_login.hbs
@@ -5,10 +5,10 @@
         <img src="/css/style/image/ic_notify_white.svg" id="ic_notify_recruit" alt="ic_notify_candidate">
     </div>
     <div class="dropdown">
-        <button class="btn btn-secondary dropdown-toggle" type="button" id="menu_account_recruit"
+        <div class="btn btn-secondary dropdown-toggle" type="button" id="menu_account_recruit"
             data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Dương Minh Hiếu
             <img src="/css/style/image/avatar_candidate.svg" id="avatar_recruit" alt="avatar_recruit">
-        </button>
+        </div>
         <div class="dropdown-menu" id="dropdown_menu_recruit" aria-labelledby="menu_account_recruit">
             <a class="dropdown-item" id="setting_account_recruit" href="/admin/reset_pw">Thay đổi mật khẩu
                 <img src="/css/style/image/ic_setting_account.svg" id="ic_setting_account_candidate"
