--- a/src/server_employer/Source/views/partials/footer.hbs
+++ b/src/server_employer/Source/views/partials/footer.hbs
@@ -1,4 +1,12 @@
 <div class="footer">
     <img id="logo_web_footer" src="/css/style/image/logo_web.svg" alt="logoweb">
     <p id="text_info_footer">Chúng tôi là JORE hệ thống tìm kiếm việc làm uy tính tại Việt Nam</p>
+    <div id="about_us">Về chúng tôi</div>
+    <div id="leadership_team">Đội ngũ quản trị viên</div>
+    <div id="blog">Blog</div>
+        <div id="terms_of_use">Điều khoản sử dụng</div>
+
+    <img src="/css/style/image/facebook.svg" alt="facebook" id="facebook">
+    <div id="text_version_footer">©️2022 JORE. All rights reversed.</div>
+        <div id="contact_footer">Contact: hoduybaoo@gmail.com</div>
 </div>
