--- a/src/server_employer/Source/views/partials/header_employer_login.hbs
+++ b/src/server_employer/Source/views/partials/header_employer_login.hbs
@@ -23,7 +23,8 @@
                 <img src="/css/style/image/ic_setting_account.svg" id="ic_setting_account_candidate"
                     alt="ic_setting_account_candidate">
             </a>
-            <a class="dropdown-item" id="application_management_candidate" href="/employer/manage_recruitments">Quản lý tin tuyển dụng
+            <a class="dropdown-item" id="application_management_candidate" href="/employer/manage_recruitments">Quản lý
+                tin tuyển dụng
                 <img src="/css/style/image/ic_managed_application.svg" id="ic_application_management_candidate"
                     alt="ic_application_management_candidate">
             </a>
