them chuc nang thay doi profile ca nhan cua candidate

--- a/src/server_candidate/Source/views/candidate/my_profile.hbs
+++ b/src/server_candidate/Source/views/candidate/my_profile.hbs
@@ -3,9 +3,9 @@
     
     <div id="content_profile_candidate_recruit">
         <div id="head_profie_candidate_recruit">
-            <img src="/css/style/image/avatar_candidate.svg" id="avatar_profile_candidate_recruit"
+            <img src="{{data.user.avatar}}" id="avatar_profile_candidate_recruit"
                 alt="avatar_profile_candidate_recruit" />
-            <div id="name_my_profile" style="cursor: pointer;">{{data.user.name}}</div>
+            <div id="name_my_profile" >{{data.user.name}}</div>
               <a id="btn_accept_candidate"  href="/candidate/edit_profile_candidate">Chỉnh
                 sửa</a>
           
